# marketplace-eval

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  sample_simulation.yaml  simple_qa_simulation.yaml
cranfield_eval/: README.md  config.yaml  evaluate_model.py  get_metrics.py  run_simple_qa_benchmark.py
examples/: demo_default.py  demo_sample.py  demo_simple_qa.py
src/marketplace_eval/: __init__.py
src/marketplace_eval/agents/: __init__.py  agent.py  generator_agent.py  llm_judge_agent.py  retriever_agent.py  router_agent.py
src/marketplace_eval/core/: io_nodes.py  link.py  node.py
src/marketplace_eval/humans/: datamorgana_config.py  profile_generator.py  synthetic_dataset_generation.py  tuna_config.py
src/marketplace_eval/post_simulation/: __init__.py  cli.py  crr.py  market_share.py  plot.py
src/marketplace_eval/prompts/: simple_qa_judge_prompt.py  user_simulation_prompt.py
src/marketplace_eval/system/: simulation_logger.py  system.py  types.py  user_data_utils.py  user_population.py
src/marketplace_eval/utils/: llm_client.py
user_data/: simple_qa_test_subset_qid.csv
